# Local-RAG-Application

./: README.md  pyproject.toml
api/: main.py
app/: main.py
rag/: config.py  ingestion.py  pipeline.py
